<?xml version="1.0" encoding="utf-8"?>
<!--
  Top-level Settings dashboard.
  Structure, item order, titles and icons are taken from the AOSP
  packages/apps/Settings project (android-4.0.4_r2.1, res/xml/settings_headers.xml).
  Each item opens the same PanelFragment, passing a "panel" extra.
-->
<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- WIRELESS and NETWORKS -->
    <header android:title="@string/header_category_wireless_networks" />

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/wifi_settings_title"
        android:icon="@drawable/ic_settings_wireless">
        <extra android:name="panel" android:value="wifi" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/bluetooth_settings_title"
        android:icon="@drawable/ic_settings_bluetooth2">
        <extra android:name="panel" android:value="bluetooth" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/data_usage_summary_title"
        android:icon="@drawable/ic_settings_data_usage">
        <extra android:name="panel" android:value="data_usage" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/radio_controls_title">
        <extra android:name="panel" android:value="more" />
    </header>

    <!-- DEVICE -->
    <header android:title="@string/header_category_device" />

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/sound_settings"
        android:icon="@drawable/ic_settings_sound">
        <extra android:name="panel" android:value="sound" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/display_settings"
        android:icon="@drawable/ic_settings_display">
        <extra android:name="panel" android:value="display" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/storage_settings"
        android:icon="@drawable/ic_settings_storage">
        <extra android:name="panel" android:value="storage" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/power_usage_summary_title"
        android:icon="@drawable/ic_settings_battery">
        <extra android:name="panel" android:value="battery" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/applications_settings"
        android:icon="@drawable/ic_settings_applications">
        <extra android:name="panel" android:value="apps" />
    </header>

    <!-- PERSONAL -->
    <header android:title="@string/header_category_personal" />

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/sync_settings"
        android:icon="@drawable/ic_settings_sync">
        <extra android:name="panel" android:value="accounts" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/location_settings_title"
        android:icon="@drawable/ic_settings_location">
        <extra android:name="panel" android:value="location" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/security_settings_title"
        android:icon="@drawable/ic_settings_security">
        <extra android:name="panel" android:value="security" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/language_settings"
        android:icon="@drawable/ic_settings_language">
        <extra android:name="panel" android:value="language_input" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/privacy_settings"
        android:icon="@drawable/ic_settings_backup">
        <extra android:name="panel" android:value="backup" />
    </header>

    <!-- SYSTEM -->
    <header android:title="@string/header_category_system" />

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/dock_settings"
        android:icon="@drawable/ic_settings_dock">
        <extra android:name="panel" android:value="dock" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/date_and_time_settings_title"
        android:icon="@drawable/ic_settings_date_time">
        <extra android:name="panel" android:value="datetime" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/accessibility_settings"
        android:icon="@drawable/ic_settings_accessibility">
        <extra android:name="panel" android:value="accessibility" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/development_settings_title"
        android:icon="@drawable/ic_settings_development">
        <extra android:name="panel" android:value="developer" />
    </header>

    <header
        android:fragment="com.icssettings.app.PanelFragment"
        android:title="@string/about_settings"
        android:icon="@drawable/ic_settings_about">
        <extra android:name="panel" android:value="about" />
    </header>

</preference-headers>
